grpcroute-backend-not-found.yaml
# Code generated by infragen. DO NOT EDIT.
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-backend-not-found
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: portaltransporter
    port: 9091
  rules:
  - backendRefs:
      - name: does-not-exist
        port: 1234
