grpcroute-bad-schema.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: >-
      my-kind-app:gateway.networking.k8s.io/GRPCRoute:default/grpcroute-bad-schema
  name: grpcroute-bad-schema
  namespace: default
spec:
  parentReferences:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: portaltransporter
      port: 9091
  rules:
    - backendReferences:
        - name: existing-backend
          port: 1234
