grpcroute-healthy.yaml
# Code generated by infragen. DO NOT EDIT.
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-healthy
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: portaltransporter
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: authorizer
      namespace: authorizer
      port: 9091
      weight: 1
