grpcroute-invalid-kind-contour.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-invalid-kind-contour
spec:
  parentRefs:
  - name: contour-test-gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    port: 9000
  rules:
  - backendRefs:
      - name: backend-name
        kind: InvalidKind
        port: 1234
