grpcroute-missing-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-missing-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: portaltransporter
      port: 9091
  rules:
    - matches:
        - method:
            service: myService
            method: MyMethod
    # No backendRefs provided!
