grpcroute-misspelled.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-bad-schema
spec:
  parentReferences:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: portaltransporter
      port: 9091
  rules:
    - backendReferences:
        - name: existing-backend
          port: 1234

# both parentRefs and backendRefs are misspelled
