grpcroute-no-gateway.yaml
# Code generated by infragen. DO NOT EDIT.
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-no-gateway
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: missing-gateway
    port: 9091
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: authorizer
      namespace: authorizer
      port: 9091
      weight: 1
